# DataSerialization

./: README.md
Apache Thrift/thriftway/: Makefile.am  Makefile.am~  Makefile~  build.xml~  multiply.thrift
Apache Thrift/thriftway/gen-java/tutorial/: MultiplicationService.java
Apache Thrift/thriftway/src/: MultiplicationClient.java  MultiplicationHandler.java  MultiplicationHandler.java~  MultiplicationServer.java~
Avro RPC/: .project  pom.xml
Avro RPC/src/main/avro/: mail.avpr
Avro RPC/src/main/java/example/: Main.java
ExampleAvro/: .classpath  .project  users.avro
ExampleAvro/src/: AvroDeserialize.java  AvroExample.java  User.java
ProtocolBuffer/: address
ProtocolBuffer/src/: ProtoRead.java  ProtoWrite.java
